# telly-spelly

./: .gitignore  README.md  get-telly-spelly.sh  install.sh  main.py  org.kde.TellySpelly.flatpak.desktop  org.kde.telly_spelly.desktop  org.kde.telly_spelly.local.desktop  progress_window.py  pyproject.toml  requirements.txt  settings_window.py  shortcuts.py  telly-spelly.desktop  uninstall.sh
flatpak/: .gitignore  org.kde.TellySpelly.yml  python-deps-wheels.json  python-deps.json  requirements-cpu.txt  torch-deps.json  torch-deps.txt
src/telly_spelly/: __init__.py  desktop_env.py  gpu.py  install.py  main.py  mic_test.py  progress_window.py  recorder.py  settings.py  settings_window.py  shortcuts.py  transcriber.py  window.py
